# belnet

./: .drone.jsonnet  .drone.yml  .drone_linux.yml  .gitignore  .gitmodules  CMakeLists.txt  readme.md
cmake/: GenVersion.cmake  StaticBuild.cmake  Version.cmake  gui-option.cmake  gui.cmake  installer.cmake  macos.cmake  ngtcp2_lib.cmake  shadow.cmake  win32.cmake  win32_installer_deps.cmake
contrib/: android-configure.sh  android.sh  cross.sh  format-version.sh  keygen.py  mac-configure.sh  mac.sh  make-ico.sh  windows-configure.sh  windows.sh
contrib/bootstrap/: testnet.signed
contrib/ci/: drone-check-static-libs.sh  drone-static-upload.sh
contrib/configs/: 00-exit.ini  00-keyfile.ini
contrib/cross/: armhf.toolchain.cmake  cross.toolchain.cmake  mips.toolchain.cmake  mips64.toolchain.cmake  mipsel.toolchain.cmake
contrib/libbelnet/: CMakeLists.txt  readme.md  udptest.cpp
contrib/macos/: InfoPlist.strings  belnet-extension.Info.plist.in  belnet-extension.entitlements.plist  belnet-extension.plugin.entitlements.plist  belnet-extension.sysext.entitlements.plist  belnet.Info.plist.in  belnet.entitlements.plist  belnet.plugin.entitlements.plist  belnet.sysext.entitlements.plist  installer.tiff  mk-icns.sh  notarize.py.in  seticon.swift  sign.sh.in
contrib/patches/: libzmq-mingw-unistd.patch  unbound-delete-crash-fix.patch
crypto/: CMakeLists.txt
daemon/: CMakeLists.txt  belnet-vpn.cpp  belnet.cpp  belnet.swift
docs/: CMakeLists.txt  config.json  fix-markdown.sh  index.md.in  macos-signing.txt  mkdocs.yml
include/: llarp.hpp
include/belnet/: belnet_misc.h  belnet_stream.h  belnet_udp.h
jni/: CMakeLists.txt  belnet_daemon.cpp
llarp/: CMakeLists.txt  belnet_shared.cpp  bootstrap-fallbacks.cpp.in  bootstrap.cpp  bootstrap.hpp  context.cpp  endpoint_base.hpp  nodedb.cpp  pow.hpp  profiling.cpp  profiling.hpp  router_contact.cpp  router_id.cpp  router_id.hpp
llarp/apple/: CMakeLists.txt  DNSTrampoline.h  DNSTrampoline.m  PacketTunnelProvider.m  context_wrapper.cpp  context_wrapper.h  route_manager.cpp  vpn_interface.cpp  vpn_interface.hpp
llarp/config/: config.cpp  config.hpp  definition.cpp  definition.hpp  ini.cpp  ini.hpp  key_manager.cpp
llarp/consensus/: reachability_testing.cpp
llarp/constants/: apple.hpp  files.hpp  net.hpp  platform.hpp  version.cpp.in  version.hpp
llarp/crypto/: crypto_libsodium.cpp  types.cpp  types.hpp
llarp/dht/: context.cpp  key.hpp
llarp/dht/messages/: findname.cpp
llarp/dns/: message.cpp  message.hpp  multi_platform.cpp  multi_platform.hpp  name.cpp  name.hpp  nm_platform.cpp  nm_platform.hpp  null_platform.hpp  platform.cpp  platform.hpp  question.cpp  question.hpp  resolver.cpp  resolver.hpp  rr.cpp  rr.hpp  sd_platform.cpp  sd_platform.hpp  server.cpp  server.hpp  srv_data.cpp  srv_data.hpp  unbound_resolver.cpp  win32_platform.cpp  win32_platform.hpp
llarp/ev/: ev.cpp  ev_libuv.cpp  ev_libuv.hpp  libuv.cpp  vpn.hpp
llarp/exit/: endpoint.cpp  endpoint.hpp  session.cpp
llarp/handlers/: exit.cpp  exit.hpp  null.hpp  tun.cpp  tun.hpp
llarp/iwp/: linklayer.cpp  linklayer.hpp  session.cpp  session.hpp
llarp/link/: server.cpp
llarp/linux/: dbus.cpp  dbus.hpp  sd_service_manager.cpp
llarp/messages/: link_message_parser.cpp  relay.cpp  relay_commit.cpp  relay_status.cpp
llarp/net/: address_info.hpp  bogon_ranges.hpp  exit_info.hpp  interface_info.cpp  interface_info.hpp  ip_address.cpp  ip_packet.cpp  ip_packet.hpp  ip_range_map.hpp  net.cpp  net.hpp  net_int.cpp  net_int.hpp  posix.cpp  sock_addr.cpp  sock_addr.hpp  win32.cpp
llarp/path/: path.cpp  path_context.cpp  pathbuilder.cpp  pathset.cpp  pathset.hpp  transit_hop.cpp  transit_hop.hpp
llarp/peerstats/: peer_db.cpp  peer_db.hpp
llarp/quic/: address.hpp  client.cpp  connection.cpp  connection.hpp  endpoint.hpp  server.cpp  stream.hpp  tunnel.cpp  tunnel.hpp
llarp/router/: abstractrouter.hpp  outbound_message_handler.cpp  outbound_message_handler.hpp  rc_gossiper.cpp  rc_lookup_handler.cpp  rc_lookup_handler.hpp  route_poker.cpp  route_poker.hpp  router.cpp  router.hpp  systemd_resolved.cpp
llarp/routing/: message_parser.cpp  transfer_traffic_message.cpp
llarp/rpc/: beldexd_rpc_client.cpp  beldexd_rpc_client.hpp  endpoint_rpc.cpp  rpc_server.cpp  rpc_server.hpp
llarp/service/: address.cpp  address.hpp  auth.cpp  auth.hpp  bns_tracker.cpp  bns_tracker.hpp  context.hpp  endpoint.cpp  endpoint.hpp  endpoint_state.cpp  endpoint_state.hpp  endpoint_types.hpp  endpoint_util.cpp  identity.cpp  info.cpp  info.hpp  intro.cpp  intro.hpp  intro_set.cpp  intro_set.hpp  name.cpp  name.hpp  outbound_context.cpp
llarp/tooling/: router_hive.cpp
llarp/util/: aligned.hpp  belnet_init.h  buffer.cpp  buffer.hpp  compare_ptr.hpp  easter_eggs.cpp  exceptions.hpp  file.cpp  file.hpp  formattable.hpp  fs.hpp  logging.hpp  nop_service_manager.cpp  priority_queue.hpp  service_manager.hpp  time.cpp  time.hpp
llarp/util/logging/: android_logger.cpp  buffer.hpp  callback_sink.hpp
llarp/vpn/: egres_packet_router.cpp  egres_packet_router.hpp  i_packet_io.hpp  linux.hpp  packet_intercept.hpp  packet_router.hpp  platform.cpp  platform.hpp  win32.cpp  win32.hpp
llarp/win32/: dll.cpp  dll.hpp  exception.cpp  exception.hpp  exec.cpp  exec.hpp  guid.hpp  handle.hpp  service_manager.cpp  service_manager.hpp  version.rc.in  windivert.cpp  windivert.hpp  wintun.cpp  wintun.hpp
pybind/: CMakeLists.txt
pybind/llarp/: config.cpp
test/: CMakeLists.txt
test/config/: test_llarp_config_definition.cpp  test_llarp_config_output.cpp  test_llarp_config_values.cpp
test/crypto/: test_llarp_crypto_types.cpp
test/dns/: test_llarp_dns_dns.cpp
test/mocks/: mock_context.hpp  mock_network.hpp  mock_router.hpp  mock_vpn.hpp
test/net/: test_llarp_net.cpp
test/regress/: 2020-06-08-key-backup-bug.cpp
test/service/: test_llarp_service_identity.cpp  test_llarp_service_name.cpp
test/util/: test_llarp_util_log_level.cpp
test/win32/: test.rc
win32-setup/: extra_create_icons.nsis  extra_install.nsis  extra_preinstall.nsis  extra_uninstall.nsis
(+1 files in other folders)
